fix: remove career top margin overlap and about-me scroll translations on mobile

--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -161,8 +161,7 @@
 @media only screen and (max-width: 1025px) {
   .career-section {
     padding: 70px 0px;
-    padding-top: 220px;
-    margin-top: -200px;
+    margin-top: 0px;
     margin-bottom: 0;
     position: relative;
     z-index: 6;
